--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#sobre">SOBRE</a></li>
                 <li><a href="#servicos">SERVIÇOS</a></li>
                 <li><a href="#profissionais">ESPECIALISTA</a></li>
-                <li><a class="login" href="">LOGIN</a></li>
+                <li><a class="login" href="login.html">LOGIN</a></li>
             </ul>
         </nav>
         <hgroup>
